# goxopy

./: .gitignore  README.md  pyproject.toml
examples/reporter/: main.py
oxo/: __init__.py  agent.py  connection.py  context.py
oxo/_note/: __init__.py  note.py  wire.py
tests/oxo/: agent_test.py  conftest.py  connection_test.py
tests/oxo/_note/: wire_test.py
